# poly_vector

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
examples/example/: CMakeLists.txt  example.cpp
include/poly_vector/: poly_vector.h
unittest/: CMakeLists.txt  unittest_poly_vector.cpp
